# TOTK-Decomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  objdiff.json
.github/scripts/: decomp-dev.py
.github/workflows/: progress.yml
config/: decomp-dev.local.example.yml  file_map.yml  link.ld  objdiff-totk.toml  objdiff.toml  splat_nx.yml
data/: shared_botw.yml
docs/: decomp-dev.md  objdiff.md
src/: CMakeLists.txt  entry.S  stubs.c
src/Game/: CMakeLists.txt
src/Game/Unk/: CMakeLists.txt  Sub09544Types.h  sub_7100000260.c  sub_710070096C.c  sub_7100701F98.c  sub_7100735DBC.c  sub_7100735DBC.cpp  sub_7100794424.c  sub_7100794424.cpp  sub_71007FF170.c  sub_71007FF170.cpp  sub_7100850B20.c  sub_7100954470.c  sub_7100F52E9C.c
src/KingSystem/: CMakeLists.txt
src/KingSystem/Physics/: CMakeLists.txt
toolchain/: ToolchainNX64.cmake
tools/: build.ps1  build.py  config.toml  create_stub.py  extract_nso_segments.py  file_list_progress.py  find_shared_botw.py  gen_file_list.py  gen_file_list_ns.py  gen_functions_csv.py  ida_dump_entry.py  ida_dump_matching.py  ida_export_pseudocode.py  make_target_obj.py  next_function.py  nso-info.py  nso_to_elf.py  patch_splat.py  run_decomp_dev_backend.ps1  run_decomp_dev_frontend.ps1  run_objdiff_report.ps1  run_splat_nx.ps1  set_status.py  setup.py
tools/patches/: decomp_dev.patch  viking.patch
